--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="./css/styles.css" >
     <link rel="preconnect" href="https://fonts.googleapis.com" >
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" >
-</head>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" >  
+  </head>
 <body>
     <!-- HEADER -->
     <header id="#top" class="page-header">
@@ -134,6 +134,55 @@
       <div class="footer-content container">
         <a href="./index.html" class="logo-footer link">Web<span class="logo-accent-footer">Studio</span></a>
         <p class="footer-descriptions">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+      </div>
+      <div class="slcial">
+        <h3 class="social-name">Social media</h3>
+        <ul class="social-icon">
+          <li class="social-list-item">
+            <a href="" class="social-list-link">
+              <svg
+                class="social-list-icon"
+                aria-label="icon instagram"
+                width="24"
+                height="24" >
+                <use href="./images/icons.svg#icon-instagram-2"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list-item">
+            <a href="" class="social-list-link">
+              <svg
+                class="social-list-icon"
+                aria-label="icon twitter"
+                width="24"
+                height="24" >
+                <use href="./images/icons.svg#icon-twitter-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list-item">
+            <a href="" class="social-list-link">
+              <svg
+                class="social-list-icon"
+                aria-label="icon facebook"
+                width="24"
+                height="24" >
+                <use href="./images/icons.svg#icon-facebook-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list-item">
+            <a href="" class="social-list-link">
+              <svg
+                class="social-list-icon"
+                aria-label="icon linkedin"
+                width="24"
+                height="24" >
+                <use href="./images/icons.svg#icon-linkedin-1"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </footer>
 </body>
