--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <a href="./index.html" class="logo link">Web<span class="logo-accent">Studio</span></a>
           <ul class="menu-list list">
             <li class="menu-item">
-              <a class="menu-link link" href="./index.html" target="_blank" rel="noopener noreferrer">Studio</a>
+              <a class="menu-link current link" href="./index.html" target="_blank" rel="noopener noreferrer">Studio</a>
             </li>
             <li class="menu-item">
               <a class="menu-link link" href="./portfolio.html" target="_blank" rel="noopener noreferrer">Portfolio</a>
@@ -47,7 +47,7 @@
       <!-- SECTION-1 -->
       <section class="image-bg">
         <div class="container">
-          <h1 class="heder-title">Effective Solutions for Your Business</h1>
+          <h1 class="heder-title" data-modal-open>Effective Solutions for Your Business</h1>
           <button type="button" class="modal-open-btn image-btn">Order Service</button>
         </div>
       </section>
@@ -57,18 +57,38 @@
           <h2 class="benefits-text visually-hidden">Section2</h2>
           <ul class="benefits-option list">
             <li class="benefits-item">
+              <div class="advantages-block">
+                <svg class="advantages-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
               <h3 class="subtitel-benefits">Strategy</h3>
               <p class="description-benefits">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
             </li>
             <li class="benefits-item">
+              <div class="advantages-block">
+                <svg class="advantages-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock-1"></use>
+                </svg>
+              </div>
               <h3 class="subtitel-benefits">Punctuality</h3>
               <p class="description-benefits">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
             <li class="benefits-item">
+              <div class="advantages-block">
+                <svg class="advantages-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
+                </svg>
+              </div>
               <h3 class="subtitel-benefits">Diligence</h3>
               <p class="description-benefits">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
             </li>
             <li class="benefits-item">
+              <div class="advantages-block">
+                <svg class="advantages-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="subtitel-benefits">Technologies</h3>
               <p class="description-benefits">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
             </li>
@@ -96,12 +116,66 @@
       <section class="card-employee section">
         <div class="container">
           <h2 class="card-employee-text">Our Team</h2>
-          <ul class="card-employee-list  list">
+          <ul class="card-employee-list list">
             <li class="card-employee-item">
               <img class="card-employee-img" src="./images/mark-guerrero.jpg" alt="product designer" width="264" height="260">
               <div class="card-employee-desc">
                 <h3 class="card-employee-name">Mark Guerrero</h3>
                 <p class="card-employee-descriptions">Product Designer</p>
+                <ul class="social-card-menu-icon">
+                  <Li class="social-card-icon ">
+                    <a
+                    class="card-socials-link link"
+                    href=""
+                    aria-label="instagram"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >
+                      <svg class="card-socials-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </Li>
+                  <Li class="social-card-icon">
+                    <a
+                    class="card-socials-link link"
+                    href=""
+                    aria-label="twitter"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >
+                      <svg class="card-socials-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </Li>
+                  <Li class="social-card-icon">
+                    <a
+                    class="card-socials-link link"
+                    href=""
+                    aria-label="facebook"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >
+                      <svg class="card-socials-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </Li>
+                  <Li class="social-card-icon">
+                    <a
+                    class="card-socials-link link"
+                    href=""
+                    aria-label="likedin"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >
+                      <svg class="card-socials-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-likedin-1"></use>
+                      </svg>
+                    </a>
+                  </Li>
+                </ul>
               </div>
             </li>
             <li class="card-employee-item">
@@ -109,6 +183,60 @@
               <div class="card-employee-desc">
                 <h3 class="card-employee-name">Tom Ford</h3>
                 <p class="card-employee-descriptions">Frontend Developer</p>
+                <ul class="social-card-menu-icon">
+                  <Li class="social-card-icon">
+                    <a
+                    class="card-socials-link link"
+                    href=""
+                    aria-label="instagram"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >
+                      <svg class="card-socials-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </Li>
+                  <Li class="social-card-icon">
+                    <a
+                    class="card-socials-link link"
+                    href=""
+                    aria-label="twitter"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >
+                      <svg class="card-socials-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </Li>
+                  <Li class="social-card-icon">
+                    <a
+                    class="card-socials-link link"
+                    href=""
+                    aria-label="facebook"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >
+                      <svg class="card-socials-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </Li>
+                  <Li class="social-card-icon">
+                    <a
+                    class="card-socials-link link"
+                    href=""
+                    aria-label="likedin"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >
+                      <svg class="card-socials-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-likedin-1"></use>
+                      </svg>
+                    </a>
+                  </Li>
+                </ul>
               </div>
             </li>
             <li class="card-employee-item">
@@ -116,6 +244,60 @@
               <div class="card-employee-desc">
                 <h3 class="card-employee-name">Camila Garcia</h3>
                 <p class="card-employee-descriptions">Marketing</p>
+                <ul class="social-card-menu-icon">
+                  <Li class="social-card-icon">
+                    <a
+                    class="card-socials-link link"
+                    href=""
+                    aria-label="instagram"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >
+                      <svg class="card-socials-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </Li>
+                  <Li class="social-card-icon">
+                    <a
+                    class="card-socials-link link"
+                    href=""
+                    aria-label="twitter"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >
+                      <svg class="card-socials-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </Li>
+                  <Li class="social-card-icon">
+                    <a
+                    class="card-socials-link link"
+                    href=""
+                    aria-label="facebook"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >
+                      <svg class="card-socials-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </Li>
+                  <Li class="social-card-icon">
+                    <a
+                    class="card-socials-link link"
+                    href=""
+                    aria-label="likedin"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >
+                      <svg class="card-socials-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-likedin-1"></use>
+                      </svg>
+                    </a>
+                  </Li>
+                </ul>
               </div>
             </li>
             <li class="card-employee-item">
@@ -123,7 +305,160 @@
               <div class="card-employee-desc">
                 <h3 class="card-employee-name">Daniel Wilson</h3>
                 <p class="card-employee-descriptions">UI Designer</p>
+                <ul class="social-card-menu-icon">
+                  <Li class="social-card-icon">
+                    <a
+                    class="card-socials-link link"
+                    href=""
+                    aria-label="instagram"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >
+                      <svg class="card-socials-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </Li>
+                  <Li class="social-card-icon">
+                    <a
+                    class="card-socials-link link"
+                    href=""
+                    aria-label="twitter"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >
+                      <svg class="card-socials-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </Li>
+                  <Li class="social-card-icon">
+                    <a
+                    class="card-socials-link link"
+                    href=""
+                    aria-label="facebook"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >
+                      <svg class="card-socials-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </Li>
+                  <Li class="social-card-icon">
+                    <a
+                    class="card-socials-link link"
+                    href=""
+                    aria-label="likedin"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >
+                      <svg class="card-socials-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-likedin-1"></use>
+                      </svg>
+                    </a>
+                  </Li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- SECTION-5 -->
+      <section class="customers">
+        <div class="customers-block container">
+          <h2 class="customers-block-text">Customers</h2>
+          <ul class="customers-list">
+            <li class="customers-item">
+              <a
+              class="customers-link"
+              href=""
+              aria-label="client"
+              target="_blank"
+              rel="noopener noreferrer"
+              >
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-client-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a
+              class="customers-link"
+              href=""
+              aria-label="union"
+              target="_blank"
+              rel="noopener noreferrer"
+              >
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-union"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a
+              class="customers-link"
+              href=""
+              aria-label="object"
+              target="_blank"
+              rel="noopener noreferrer"
+              >
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-object"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a
+              class="customers-link"
+              href=""
+              aria-label="logo-company"
+              target="_blank"
+              rel="noopener noreferrer"
+              >
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-logo-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a
+              class="customers-link"
+              href=""
+              aria-label="foster-petters"
+              target="_blank"
+              rel="noopener noreferrer"
+              >
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-logo-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a
+              class="customers-link"
+              href=""
+              aria-label="brand"
+              target="_blank"
+              rel="noopener noreferrer"
+              >
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-logo-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a
+              class="customers-link"
+              href=""
+              aria-label="tag-line"
+              target="_blank"
+              rel="noopener noreferrer"
+              >
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-logo-4"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -136,7 +471,7 @@
         <p class="footer-descriptions">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
       </div>
       <div class="slcial">
-        <h3 class="social-name">Social media</h3>
+        <p class="social-name">Social media</p>
         <ul class="social-icon">
           <li class="social-list-item">
             <a href="" class="social-list-link">
