--- a/index.html
+++ b/index.html
@@ -523,8 +523,8 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
-          <svg class="modal-icon" width="24" height="24">
-            <use href="./images/icons.svg#icon-instagram"></use>
+          <svg class="modal-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-person-black-18dp"></use>
           </svg>
         </button>
       </div>
