--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       <!-- SECTION-1 -->
       <section class="image-bg">
         <div class="container">
-          <h1 class="heder-title" data-modal-open>Effective Solutions for Your Business</h1>
-          <button type="button" class="modal-open-btn image-btn">Order Service</button>
+          <h1 class="heder-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="modal-open-btn image-btn"  data-modal-open>Order Service</button>
         </div>
       </section>
       <!-- SECTION-2 -->
@@ -369,7 +369,7 @@
         <div class="customers-block container">
           <h2 class="customers-block-text">Customers</h2>
           <ul class="customers-list">
-            <li class="customers-item">
+            <li class="customers-item ">
               <a
               class="customers-link"
               href=""
@@ -520,10 +520,11 @@
         </ul>
       </div>
     </footer>
+    <!-- MODAL -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
-          <svg class="modal-icon" width="8" height="8">
+          <svg class="modal-icon-close" width="8" height="8">
             <use href="./images/icons.svg#icon-person-black-18dp"></use>
           </svg>
         </button>
