--- a/portfolio.html
+++ b/portfolio.html
@@ -16,32 +16,32 @@
     <!-- HEADER -->
     <header id="#top" class="page-header">
         <div class="page-header-container container">
-            <nav class="page-navigation-menu">
-              <a href="./index.html" class="logo link">Web<span class="logo-accent">Studio</span></a>
-              <ul class="menu-list list">
-                <li class="menu-item">
-                  <a class="menu-link link" href="./index.html" target="_blank" rel="noopener noreferrer">Studio</a>
-                </li>
-                <li class="menu-item">
-                  <a class="menu-link link" href="./portfolio.html" target="_blank" rel="noopener noreferrer">Portfolio</a>
-                </li>
-                <li class="menu-item">
-                  <a class="menu-link link" href="" target="_blank" rel="noopener noreferrer">Contacts</a>
-                </li>
-              </ul>
-            </nav>
-            <address class="page-contact">
-              <ul class="contact-list list">
-                <li class="contact-item">
-                  <a class="force link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li class="contact-item">
-                  <a class="force link" href="tel:+110001111111">+11 (000) 111-11-11</a>
-                </li>
-              </ul>
-            </address>
+          <nav class="page-navigation-menu">
+            <a href="./index.html" class="logo link">Web<span class="logo-accent">Studio</span></a>
+            <ul class="menu-list list">
+              <li class="menu-item">
+                <a class="menu-link current link" href="./index.html" target="_blank" rel="noopener noreferrer">Studio</a>
+              </li>
+              <li class="menu-item">
+                <a class="menu-link link" href="./portfolio.html" target="_blank" rel="noopener noreferrer">Portfolio</a>
+              </li>
+              <li class="menu-item">
+                <a class="menu-link link" href="" target="_blank" rel="noopener noreferrer">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+          <address class="page-contact">
+            <ul class="contact-list list">
+              <li class="contact-item">
+                <a class="force link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              </li>
+              <li class="contact-item">
+                <a class="force link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+              </li>
+            </ul>
+          </address>
         </div>
-    </header>
+      </header>
     <!-- MAIN -->
     <main>
         <!-- SECTION-1 -->
@@ -148,6 +148,55 @@
           <a href="./index.html" class="logo-footer link">Web<span class="logo-accent-footer">Studio</span></a>
           <p class="footer-descriptions">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
-      </footer>
+        <div class="slcial">
+          <p class="social-name">Social media</p>
+          <ul class="social-icon">
+            <li class="social-list-item">
+              <a href="" class="social-list-link">
+                <svg
+                  class="social-list-icon"
+                  aria-label="icon instagram"
+                  width="24"
+                  height="24" >
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-link">
+                <svg
+                  class="social-list-icon"
+                  aria-label="icon twitter"
+                  width="24"
+                  height="24" >
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-link">
+                <svg
+                  class="social-list-icon"
+                  aria-label="icon facebook"
+                  width="24"
+                  height="24" >
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-link">
+                <svg
+                  class="social-list-icon"
+                  aria-label="icon linkedin"
+                  width="24"
+                  height="24" >
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+    </footer>
 </body>
 </html>
