--- a/portfolio.html
+++ b/portfolio.html
@@ -49,18 +49,21 @@
             <div class="container">
                 <h1 class="heder-title visually-hidden">Portfolio for Your Business</h1>
                 <ul class="menu-filter-list list">
-                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button">All</button></li>
-                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button">Web Site</button></li>
-                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button">App</button></li>
-                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button">Design</button></li>
-                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button">Marketing</button></li>
+                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button"><a href="filter-btn-link">All</a></button></li>
+                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button"><a href="filter-btn-link">Web Site</a></button></li>
+                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button"><a href="filter-btn-link">App</a></button></li>
+                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button"><a href="filter-btn-link">Design</a></button></li>
+                    <li class="menu-filter-item"><button class="menu-filter-btn" type="button"><a href="filter-btn-link">Marketing</a></button></li>
                 </ul>
                 <!-- SECTION-2 -->
                 <ul class="cards-product-list list">
                     <li class="cards-product-item">
                         <a class="cards-product-link link" href="">
-                            <img class="cards-product-img" src="./images/portfolio/banking-app-interface-concept.jpg" alt="banking-app" width="360" >
-                            <div class="cards-product-desc">
+                            <div class="cards-product-img-block">
+                                <img class="cards-product-img" src="./images/portfolio/banking-app-interface-concept.jpg" alt="banking-app" width="360" >
+                                <p class="cards-product-descriptions">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
+                             <div class="cards-product-desc">
                                 <h2 class="cards-product-text">Banking App Interface Concept</h2>
                                 <p class="cards-product-descriptions">App</p>
                             </div>
@@ -68,7 +71,10 @@
                     </li>
                     <li class="cards-product-item">
                         <a class="cards-product-link link" href="">
-                            <img class="cards-product-img" src="./images/portfolio/cashless-payment.jpg" alt="cashless-payment" width="360" >
+                            <div class="cards-product-img-block">
+                                <img class="cards-product-img" src="./images/portfolio/cashless-payment.jpg" alt="cashless-payment" width="360" >
+                                <p class="cards-product-descriptions">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <div class="cards-product-desc">
                                 <h2 class="cards-product-text">Cashless Payment</h2>
                                 <p class="cards-product-descriptions">Marketing</p>
@@ -77,7 +83,10 @@
                     </li>
                     <li class="cards-product-item">
                         <a class="cards-product-link link" href="">
-                            <img class="cards-product-img" src="./images/portfolio/meditation-app.jpg" alt="meditation-app" width="360" >
+                            <div class="cards-product-img-block">
+                                <img class="cards-product-img" src="./images/portfolio/meditation-app.jpg" alt="meditation-app" width="360" >
+                                <p class="cards-product-descriptions">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <div class="cards-product-desc">
                                 <h2 class="cards-product-text">Meditation App</h2>
                                 <p class="cards-product-descriptions">App</p>
@@ -86,7 +95,10 @@
                     </li>
                     <li class="cards-product-item">
                         <a class="cards-product-link link" href="">
-                            <img class="cards-product-img" src="./images/portfolio/taxi-service.jpg" alt="taxi-service" width="360" >
+                            <div class="cards-product-img-block">
+                                <img class="cards-product-img" src="./images/portfolio/taxi-service.jpg" alt="taxi-service" width="360" >
+                                <p class="cards-product-descriptions">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <div class="cards-product-desc">
                                 <h2 class="cards-product-text">Taxi Service</h2>
                                 <p class="cards-product-descriptions">Marketing</p>
@@ -95,7 +107,10 @@
                     </li>
                     <li class="cards-product-item">
                         <a class="cards-product-link link" href="">
-                            <img class="cards-product-img" src="./images/portfolio/screen-illustrations.jpg" alt="screen-illustrations" width="360" >
+                            <div class="cards-product-img-block">
+                                <img class="cards-product-img" src="./images/portfolio/screen-illustrations.jpg" alt="screen-illustrations" width="360" >
+                                <p class="cards-product-descriptions">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <div class="cards-product-desc">
                                 <h2 class="cards-product-text">Screen Illustrations</h2>
                                 <p class="cards-product-descriptions">Design</p>
@@ -104,7 +119,10 @@
                     </li>
                     <li class="cards-product-item">
                         <a class="cards-product-link link" href="">
-                            <img class="cards-product-img" src="./images/portfolio/online-courses.jpg" alt="online-courses" width="360" >
+                            <div class="cards-product-img-block">
+                                <img class="cards-product-img" src="./images/portfolio/online-courses.jpg" alt="online-courses" width="360" >
+                                <p class="cards-product-descriptions">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <div class="cards-product-desc">
                                 <h2 class="cards-product-text">Online Courses</h2>
                                 <p class="cards-product-descriptions">Marketing</p>
@@ -113,7 +131,10 @@
                     </li>
                     <li class="cards-product-item">
                         <a class="cards-product-link link" href="">
-                            <img class="cards-product-img" src="./images/portfolio/instagram-stories-concept.jpg" alt="instagram-stories-concept" width="360" >
+                            <div class="cards-product-img-block">
+                                <img class="cards-product-img" src="./images/portfolio/instagram-stories-concept.jpg" alt="instagram-stories-concept" width="360" >
+                                <p class="cards-product-descriptions">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <div class="cards-product-desc">
                                 <h2 class="cards-product-text">Instagram Stories Concept</h2>
                                 <p class="cards-product-descriptions">Design</p>
@@ -122,7 +143,10 @@
                     </li>
                     <li class="cards-product-item">
                         <a class="cards-product-link link" href="">
-                            <img class="cards-product-img" src="./images/portfolio/organic-food.jpg" alt="organic-food" width="360" >
+                            <div class="cards-product-img-block">
+                                <img class="cards-product-img" src="./images/portfolio/organic-food.jpg" alt="organic-food" width="360" >
+                                <p class="cards-product-descriptions">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <div class="cards-product-desc">
                                 <h2 class="cards-product-text">Organic Food</h2>
                                 <p class="cards-product-descriptions">Web Site</p>
@@ -131,7 +155,10 @@
                     </li>
                     <li class="cards-product-item">
                         <a class="cards-product-link link" href="">
-                            <img class="cards-product-img" src="./images/portfolio/fresh-coffee.jpg" alt="fresh-coffee" width="360" >
+                            <div class="cards-product-img-block">
+                                <img class="cards-product-img" src="./images/portfolio/fresh-coffee.jpg" alt="fresh-coffee" width="360" >
+                                <p class="cards-product-descriptions">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <div class="cards-product-desc">
                                 <h2 class="cards-product-text">Fresh Coffee</h2>
                                 <p class="cards-product-descriptions">Web Site</p>
